@@ -48,22 +48,20 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation("commons-codec:commons-codec:1.18.0")
-    implementation("org.apache.logging.log4j:log4j-core:2.24.3")
-    implementation("org.apache.logging.log4j:log4j-api:2.24.3")
+    implementation("org.apache.logging.log4j:log4j-core:2.25.1")
+    implementation("org.apache.logging.log4j:log4j-api:2.25.1")
     testImplementation("org.mockito:mockito-core:5.17.0")
-    implementation("com.squareup:javapoet:1.13.0")
-    compileOnly 'com.google.auto.service:auto-service-annotations:1.1.1'
-    annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
+    implementation project(':UtilityProcessor')
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17) // or 21, etc.
+    }
+}
 
 tasks.named('test') {
     useJUnitPlatform()
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += ["--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"]
-    options.compilerArgs += ["--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"]
 }
 
 tasks.withType(JavaCompile).configureEach {
